--- a/package.json
+++ b/package.json
@@ -1,22 +1,16 @@
 {
   "name": "cse340",
   "version": "1.0.0",
-  "description": "Starter project for CSE 340",
+  "description": "Inventory detail app",
   "main": "server.js",
   "scripts": {
-    "start": "node server.js",
     "dev": "nodemon server.js"
   },
-  "author": "",
-  "license": "ISC",
   "dependencies": {
-    "dotenv": "^16.6.1",
     "ejs": "^3.1.10",
-    "express": "^4.22.1",
-    "express-ejs-layouts": "^2.5.1",
-    "pg": "^8.17.2"
+    "express": "^4.22.1"
   },
   "devDependencies": {
-    "nodemon": "^3.1.0"
+    "nodemon": "^3.1.11"
   }
 }
