--- a/package.json
+++ b/package.json
@@ -1,16 +1,17 @@
 {
   "name": "cse340",
   "version": "1.0.0",
-  "description": "Inventory detail app",
-  "main": "server.js",
-  "scripts": {
-    "dev": "nodemon server.js"
-  },
   "dependencies": {
-    "ejs": "^3.1.10",
-    "express": "^4.22.1"
+    "connect-flash": "^0.1.1",
+    "connect-pg-simple": "^9.0.0",
+    "dotenv": "^16.3.1",
+    "express": "^4.18.2",
+    "express-messages": "^1.0.1",
+    "express-session": "^1.17.3",
+    "pg": "^8.11.3",
+    "ejs": "^3.1.9"
   },
-  "devDependencies": {
-    "nodemon": "^3.1.11"
+  "scripts": {
+    "dev": "node server.js"
   }
 }
