--- a/package.json
+++ b/package.json
@@ -2,16 +2,22 @@
   "name": "cse340",
   "version": "1.0.0",
   "dependencies": {
+    "bcryptjs": "^3.0.3",
+    "body-parser": "^2.2.2",
     "connect-flash": "^0.1.1",
     "connect-pg-simple": "^9.0.0",
     "dotenv": "^16.3.1",
+    "ejs": "^3.1.9",
     "express": "^4.18.2",
     "express-messages": "^1.0.1",
     "express-session": "^1.17.3",
-    "pg": "^8.11.3",
-    "ejs": "^3.1.9"
+    "express-validator": "^7.3.1",
+    "pg": "^8.11.3"
   },
   "scripts": {
     "dev": "node server.js"
+  },
+  "devDependencies": {
+    "nodemon": "^3.1.11"
   }
 }
