--- a/package.json
+++ b/package.json
@@ -1,23 +1,15 @@
 {
   "name": "cse340",
   "version": "1.0.0",
+  "main": "server.js",
+  "scripts": {
+    "start": "node server.js"
+  },
   "dependencies": {
-    "bcryptjs": "^3.0.3",
-    "body-parser": "^2.2.2",
+    "body-parser": "^1.20.4",
     "connect-flash": "^0.1.1",
-    "connect-pg-simple": "^9.0.0",
-    "dotenv": "^16.3.1",
     "ejs": "^3.1.10",
     "express": "^4.22.1",
-    "express-messages": "^1.0.1",
-    "express-session": "^1.19.0",
-    "express-validator": "^7.3.1",
-    "pg": "^8.17.2"
-  },
-  "scripts": {
-    "dev": "node server.js"
-  },
-  "devDependencies": {
-    "nodemon": "^3.1.11"
+    "express-session": "^1.19.0"
   }
 }
