--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "connect-flash": "^0.1.1",
     "ejs": "^3.1.10",
     "express": "^4.22.1",
-    "express-session": "^1.19.0"
+    "express-session": "^1.19.0",
+    "pg": "^8.18.0"
   }
 }
