--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
   "name": "cse340",
   "version": "1.0.0",
-  "main": "server.js",
+  "main": "app.js",
   "scripts": {
-    "start": "node server.js"
+    "start": "node app.js"
   },
   "dependencies": {
     "body-parser": "^1.20.4",
