--- a/package.json
+++ b/package.json
@@ -12,5 +12,8 @@
     "express": "^4.22.1",
     "express-session": "^1.19.0",
     "pg": "^8.18.0"
+  },
+  "engines": {
+    "node": ">=18.0.0"
   }
 }
