--- a/package.json
+++ b/package.json
@@ -1,16 +1,19 @@
 {
   "name": "cse340",
   "version": "1.0.0",
+  "description": "CSE340 Vehicle Management app",
   "main": "app.js",
   "scripts": {
     "start": "node app.js"
   },
   "dependencies": {
-    "body-parser": "^1.20.4",
-    "connect-flash": "^0.1.1",
+    "bcryptjs": "^3.0.3",
+    "cookie-parser": "^1.4.7",
+    "dotenv": "^17.2.3",
     "ejs": "^3.1.10",
     "express": "^4.22.1",
-    "express-session": "^1.19.0",
+    "express-validator": "^7.3.1",
+    "jsonwebtoken": "^9.0.3",
     "pg": "^8.18.0"
   }
 }
