--- a/package.json
+++ b/package.json
@@ -8,10 +8,12 @@
   },
   "dependencies": {
     "bcryptjs": "^3.0.3",
+    "connect-flash": "^0.1.1",
     "cookie-parser": "^1.4.7",
-    "dotenv": "^17.2.3",
+    "dotenv": "^17.2.4",
     "ejs": "^3.1.10",
     "express": "^4.22.1",
+    "express-session": "^1.19.0",
     "express-validator": "^7.3.1",
     "jsonwebtoken": "^9.0.3",
     "pg": "^8.18.0"
