Created review table in PostgreSQL with foreign keys to account and inventory.
Added review-model.js to handle adding and retrieving reviews from the database.

Implemented reviewController.js with server-side validation and error handling.

Created reviewRoute.js for the POST /reviews/add route.

Updated inventory/detail.ejs to display reviews and an accessible review form with proper labels, ARIA attributes, and client-side validation.

Integrated flash messages for success/error feedback.

Ensured full MVC structure, database interaction, validation, and error handling.

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "cse340",
   "version": "1.0.0",
-  "description": "CSE 340 Web Backend Development Project",
+  "description": "CSE 340 Web Backend Project with Review Enhancement",
   "main": "app.js",
   "scripts": {
     "start": "node app.js",
