--- a/package.json
+++ b/package.json
@@ -9,10 +9,11 @@
   "dependencies": {
     "connect-flash": "^0.1.1",
     "dotenv": "^17.3.1",
-    "ejs": "^3.1.9",
-    "express": "^4.18.2",
+    "ejs": "^3.1.10",
+    "express": "^4.22.1",
     "express-ejs-layouts": "^2.5.1",
-    "express-session": "^1.17.3",
+    "express-session": "^1.19.0",
+    "mysql2": "^3.17.2",
     "pg": "^8.12.0"
   }
 }
