--- a/package.json
+++ b/package.json
@@ -7,12 +7,14 @@
     "start": "node server.js"
   },
   "dependencies": {
+    "bcryptjs": "^3.0.3",
     "connect-flash": "^0.1.1",
     "dotenv": "^17.3.1",
     "ejs": "^3.1.10",
     "express": "^4.22.1",
     "express-ejs-layouts": "^2.5.1",
     "express-session": "^1.19.0",
+    "jsonwebtoken": "^9.0.3",
     "mysql2": "^3.17.2",
     "pg": "^8.12.0"
   }
