--- a/package.json
+++ b/package.json
@@ -1,22 +1,15 @@
 {
   "name": "jones_surf_shop",
   "version": "1.0.0",
-  "description": "Inventory management system for Jones Surf Shop",
   "main": "server.js",
   "scripts": {
     "start": "node server.js"
   },
   "dependencies": {
-    "bcryptjs": "^3.0.3",
-    "connect-flash": "^0.1.1",
-    "connect-pg-simple": "^10.0.0",
     "dotenv": "^17.3.1",
-    "ejs": "^3.1.10",
     "express": "^4.22.1",
-    "express-ejs-layouts": "^2.5.1",
-    "express-session": "^1.19.0",
-    "jsonwebtoken": "^9.0.3",
-    "mysql2": "^3.17.3",
-    "pg": "^8.18.0"
+    "express-session": "^1.17.3",
+    "pg": "^8.11.1",
+    "ejs": "^3.1.9"
   }
 }
