--- a/package.json
+++ b/package.json
@@ -7,9 +7,9 @@
   },
   "dependencies": {
     "dotenv": "^17.3.1",
+    "ejs": "^3.1.9",
     "express": "^4.22.1",
     "express-session": "^1.17.3",
-    "pg": "^8.11.1",
-    "ejs": "^3.1.9"
+    "pg": "^8.11.1"
   }
 }
