--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "ejs": "^3.1.9",
     "express": "^4.22.1",
     "express-session": "^1.17.3",
+    "express-validator": "^7.3.1",
     "pg": "^8.11.1"
   }
 }
