Convert account controller and routes to ES modules - Updated accountController.js to use import/export - Updated account routes to import controller functions - Prepared project for Node ES module compatibility

--- a/package.json
+++ b/package.json
@@ -1,11 +1,13 @@
 {
   "name": "jones_surf_shop",
   "version": "1.0.0",
+  "type": "module",
   "main": "server.js",
   "scripts": {
     "start": "node server.js"
   },
   "dependencies": {
+    "cookie-parser": "^1.4.7",
     "dotenv": "^17.3.1",
     "ejs": "^3.1.9",
     "express": "^4.22.1",
