--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "express": "^4.22.1",
     "express-session": "^1.17.3",
     "express-validator": "^7.3.1",
+    "mysql2": "^3.17.4",
     "pg": "^8.11.1"
   }
 }
