--- a/package.json
+++ b/package.json
@@ -1,20 +1,19 @@
 {
   "name": "jones_surf_shop",
   "version": "1.0.0",
+  "description": "Surf shop web application",
   "type": "module",
   "main": "server.js",
   "scripts": {
     "start": "node server.js"
   },
   "dependencies": {
-    "bcryptjs": "^3.0.3",
-    "cookie-parser": "^1.4.7",
-    "dotenv": "^17.3.1",
-    "ejs": "^3.1.9",
-    "express": "^4.22.1",
+    "bcryptjs": "^2.4.3",
+    "express": "^4.18.2",
     "express-session": "^1.17.3",
-    "express-validator": "^7.3.1",
+    "cookie-parser": "^1.4.6",
     "mysql2": "^3.17.4",
-    "pg": "^8.11.1"
+    "dotenv": "^16.3.1",
+    "ejs": "^3.1.9"
   }
 }
