--- a/package.json
+++ b/package.json
@@ -9,11 +9,12 @@
   },
   "dependencies": {
     "bcryptjs": "^2.4.3",
+    "cookie-parser": "^1.4.6",
+    "dotenv": "^16.3.1",
+    "ejs": "^3.1.9",
     "express": "^4.18.2",
     "express-session": "^1.17.3",
-    "cookie-parser": "^1.4.6",
     "mysql2": "^3.17.4",
-    "dotenv": "^16.3.1",
-    "ejs": "^3.1.9"
+    "pg": "^8.18.0"
   }
 }
